<?xml version="1.0"?>
<package>
  <name>ahl_wbc</name>
  <version>0.0.0</version>
  <description>
    <p>Metapackage that contains ROS packages for whole body control/operational space control/task space control</p>
  </description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_wbc</url> -->
  <!-- <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
