<?xml version="1.0"?>
<package>
  <name>ahl_robot_controller</name>
  <version>1.0.0</version>
  <description>The ahl_robot_controller package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ahl_robot_controller</url>
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ahl_digital_filter</build_depend>
  <build_depend>ahl_robot</build_depend>
  <build_depend>ahl_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>ahl_digital_filter</run_depend>
  <run_depend>ahl_robot</run_depend>
  <run_depend>ahl_utils</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
